syntax = "proto3";

                 package wedInvEvent;
service WedInvEventService {
 rpc createWedInvEvent (WedInvEventCreateInput) returns (WedInvEvent) {}
rpc wedInvEvents (findManyParams) returns (stream WedInvEvent) {}
rpc wedInvEvent (WedInvEventWhereUniqueInput) returns (WedInvEvent) {}
rpc updateWedInvEvent (WedInvEventUpdateInput) returns (WedInvEvent) {}
rpc deleteWedInvEvent (WedInvEventWhereUniqueInput) returns (WedInvEvent) {} 
 }
message WedInvEventCreateInput {
string address = 1;
string createdAt = 2;
string date = 3;
string eventEnd = 4;
string eventStart = 5;
string id = 6;
string maps = 7;
string name = 8;
string place = 9;
string updatedAt = 10;
repeated string zone = 11;
};
message WedInvEvent {
string address = 1;
string createdAt = 2;
string date = 3;
string eventEnd = 4;
string eventStart = 5;
string id = 6;
string maps = 7;
string name = 8;
string place = 9;
string updatedAt = 10;
repeated string zone = 11;
};
message WedInvEventWhereUniqueInput {
string address = 1;
string createdAt = 2;
string date = 3;
string eventEnd = 4;
string eventStart = 5;
string id = 6;
string maps = 7;
string name = 8;
string place = 9;
string updatedAt = 10;
repeated string zone = 11;
};
message WedInvEventUpdateInput {
string address = 1;
string createdAt = 2;
string date = 3;
string eventEnd = 4;
string eventStart = 5;
string id = 6;
string maps = 7;
string name = 8;
string place = 9;
string updatedAt = 10;
repeated string zone = 11;
};
message findManyParams {

};